--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
             <img id="cover" src="src/cover.png">
         </div>
         <div class="profile-picture-avatar">
-            <img id="avatar" src="src/avatar.png">
+            <img id="avatar" src="src/Jkid.jpg">
         </div>
         <div class="profile-info">
             <h1 class="name">Lê Gia Kiệt</h1>
-            <p class="classname">KHCL2021.2</p>
         </div>
         <div class="aboutme">
             <h2><bold>✨ About me ✨</bold></h2>
@@ -33,11 +32,11 @@
             <p> • Date of birth: 12/12/2003</p>
             <p> • From: Dong Nai, Viet Nam</p>
             <p> • Studying at: Ho Chi Minh University of Information Technology</p>
-            <p> • Major: Computer Sciene (Artificial Intelligence)</p>
-            <p> • Favourite : 🖥️Learning code , ⚽Playing football,  🎧Music, 🏆 Playing games.</p>
+            <p> • Major: Information System</p>
+            <p> • Favourite : 🖥️Learning code | ⚽Playing football |🎧Music <br>🏆 Playing games.</p>
             <h2><bold>✨ Achievement ✨</bold></h2>
             <p> • Member of WebDev Studios.</p>
-            <p> <h2><bold>✨ Contact ✨</bold></h2> • legiakiet1203@gmail.com </p>
+            <p> <h2><bold>✨ Contact ✨</bold></h2> • g.kietle@gmail.com </p>
         </div>
         <div class="social">
             <img onclick="window.open('https://www.youtube.com/channel/UCSp9tcqnf29z-MMH1FI-D9Q')" class="logo"
@@ -45,7 +44,7 @@
             <img onclick="window.open('https://www.facebook.com/f4c3b00k.gi4Ki37')" class="logo"
                 src="src/facebook-white.png"></img>
             <img onclick="window.open('https://github.com/lgkiet')" class="logo" src="src/github-white.png"></img>
-            <img onclick="window.open('https://www.instagram.com/g_kiet12/')" class="logo"
+            <img onclick="window.open('https://www.instagram.com/g_kiet12/')" class="logo" class="ig-logo"
                 src="src/instagram-white.png"></img>
         </div>
 
