--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="social">
             <img onclick="window.open('https://www.youtube.com/channel/UCSp9tcqnf29z-MMH1FI-D9Q')" class="logo"
                 src="src/youtube-white.png"></img>
-            <img onclick="window.open('https://www.facebook.com/f4c3b00k.gi4Ki37')" class="logo"
+            <img onclick="window.open('https://www.facebook.com/g.kiet12')" class="logo"
                 src="src/facebook-white.png"></img>
             <img onclick="window.open('https://github.com/lgkiet')" class="logo" src="src/github-white.png"></img>
             <img onclick="window.open('https://www.instagram.com/g_kiet12/')" class="logo" class="ig-logo"
